# ataraxia

./: Cargo.toml  NOTES.md  README.md  build.rs  rustfmt.toml
ataraxia/: Cargo.toml
ataraxia/examples/: alpha-renaming.rs
ataraxia/src/: core.rs  lib.rs  term.rs  theorem.rs
src/: foundation.rs  lib.rs
src/core/: mod.rs  terms.rs  theorem.rs  types.rs
src/core/terms/: compute.rs  mod.rs  variants.rs
src/core/types/: mod.rs  unify.rs  variants.rs
src/fusion/: mod.rs  theorem.rs
src/fusion/terms/: builder.rs  mod.rs  variants.rs
src/fusion/types/: builder.rs  mod.rs  unify.rs  variants.rs
src/parser/: grammar.lalrpop  mod.rs  pratt.rs
