[package]
name = "furina"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.11"
lalrpop-util = { version = "0.20.0", features = ["lexer", "unicode"] }
once_cell = "1.19.0"
smol_str = "0.2.1"

[build-dependencies]
lalrpop = "0.20.0"
